[package]
name         = "cw-jellyfish-merkle"
version      = "0.0.0"
authors      = ["Larry Lyu <gm@larry.engineer>"]
edition      = "2021"
rust-version = "1.71"
description  = "Jellyfish Merkle Tree (JMT) as a CosmWasm contract"
readme       = "README.md"
repository   = "https://github.com/larry0x/cw-jellyfish-merkle"
publish      = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default    = []
library    = []
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
blake3          = { version = "1", features = ["serde"] }
cosmwasm-schema = "1.4"
cosmwasm-std    = "1.4"
# This fork of cw-storage-plus makes two changes:
#
# 1. Exporting the `namespaced_prefix_range` helper function, which we use in
# defining the `Set` storage type.
#
# 2. Introducing a Key::Owned enum variant:
# https://github.com/larry0x/cw-storage-plus/commit/d35b9fb
#
# The rationale for this change:
# https://github.com/CosmWasm/cw-storage-plus/issues/58
cw-storage-plus = { git = "https://github.com/larry0x/cw-storage-plus.git", rev = "c54332a" }
hex             = "0.4"
schemars        = "0.8"
serde           = { version = "1", default-features = false }
thiserror       = "1"

[dev-dependencies]
serde_json = "1"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
overflow-checks  = true
opt-level        = 3
panic            = "abort"
rpath            = false
